[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Score.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "blink"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 0.6, 0.6, 0.6 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Score" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 960.0
margin_bottom = 134.0
size_flags_horizontal = 3
custom_constants/margin_top = 100

[node name="Winner1" type="Label" parent="MarginContainer"]
margin_top = 100.0
margin_right = 960.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Winner: Player One"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Winner2" type="Label" parent="MarginContainer"]
margin_top = 100.0
margin_right = 960.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Winner: Player Two"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Winner3" type="Label" parent="MarginContainer"]
margin_top = 100.0
margin_right = 960.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Winner: Player Three"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Winner4" type="Label" parent="MarginContainer"]
margin_top = 100.0
margin_right = 960.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Winner: Player Four"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Draw" type="Label" parent="MarginContainer"]
margin_top = 100.0
margin_right = 960.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Winner: Draw"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_top = 138.0
margin_right = 960.0
margin_bottom = 426.0
custom_constants/margin_top = 100

[node name="GridContainer" type="GridContainer" parent="MarginContainer2"]
margin_top = 100.0
margin_right = 960.0
margin_bottom = 288.0
columns = 2

[node name="MarginContainer1" type="MarginContainer" parent="MarginContainer2/GridContainer"]
margin_right = 652.0
margin_bottom = 44.0
custom_constants/margin_right = 300
custom_constants/margin_top = 15
custom_constants/margin_left = 200

[node name="Label1" type="Label" parent="MarginContainer2/GridContainer/MarginContainer1"]
margin_left = 200.0
margin_top = 15.0
margin_right = 352.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player One"

[node name="Score1" type="Label" parent="MarginContainer2/GridContainer"]
margin_left = 656.0
margin_top = 7.0
margin_right = 698.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer2/GridContainer"]
margin_top = 48.0
margin_right = 652.0
margin_bottom = 92.0
custom_constants/margin_right = 300
custom_constants/margin_top = 15
custom_constants/margin_left = 200

[node name="Label2" type="Label" parent="MarginContainer2/GridContainer/MarginContainer2"]
margin_left = 200.0
margin_top = 15.0
margin_right = 352.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player Two"

[node name="Score2" type="Label" parent="MarginContainer2/GridContainer"]
margin_left = 656.0
margin_top = 55.0
margin_right = 698.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer2/GridContainer"]
margin_top = 96.0
margin_right = 652.0
margin_bottom = 140.0
custom_constants/margin_right = 300
custom_constants/margin_top = 15
custom_constants/margin_left = 200

[node name="Label3" type="Label" parent="MarginContainer2/GridContainer/MarginContainer3"]
margin_left = 200.0
margin_top = 15.0
margin_right = 352.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player Three"

[node name="Score3" type="Label" parent="MarginContainer2/GridContainer"]
margin_left = 656.0
margin_top = 103.0
margin_right = 698.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer2/GridContainer"]
margin_top = 144.0
margin_right = 652.0
margin_bottom = 188.0
custom_constants/margin_right = 300
custom_constants/margin_top = 15
custom_constants/margin_left = 200

[node name="Label4" type="Label" parent="MarginContainer2/GridContainer/MarginContainer4"]
margin_left = 200.0
margin_top = 15.0
margin_right = 352.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player Four"

[node name="Score4" type="Label" parent="MarginContainer2/GridContainer"]
margin_left = 656.0
margin_top = 151.0
margin_right = 698.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"

[node name="Continue" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_top = 430.0
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press A to continue"
align = 2
valign = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Continue"]
autoplay = "blink"
anims/blink = SubResource( 4 )
